// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render closed modal 1`] = `
<body
  style=""
>
  <div />
  <div />
</body>
`;

exports[`render open modal 1`] = `
.c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c5:focus {
  outline: none;
}

.c5[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c5 + .bd-button {
  margin-top: 0.5rem;
}

.c5:active {
  background-color: #0B38D9;
}

.c5:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5:hover:not(:active) {
  background-color: #2852EB;
}

.c5[disabled] {
  background-color: #D9DCE9;
}

.c7 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c6 {
  background-color: transparent;
  border: none;
  color: #313440;
  height: auto;
  padding: 0;
}

.c6:active {
  background-color: #DBE3FE;
}

.c6:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c6:hover:not(:active) {
  background-color: #F0F3FF;
}

.c6[disabled] {
  color: #D9DCE9;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1040;
  background: rgba(49,52,64,0.7);
}

.c3 {
  background: #FFFFFF;
  box-sizing: border-box;
  position: fixed;
  z-index: 1050;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 1rem;
  overflow-y: auto;
}

@media (min-width:720px) {
  .c5 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c3 {
    border-radius: 0.25rem;
    box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
    height: auto;
    max-height: 90vh;
    max-width: 720px;
  }
}

@media (min-width:1025px) {
  .c3 {
    max-height: 80vh;
  }
}

@media (min-width:720px) {
  .c4 {
    display: none;
  }
}

@media (min-width:720px) {
  .c9 {
    padding: 0 1.5rem;
  }
}

<body
  style="overflow-y: hidden;"
>
  <div />
  <div>
    <div
      aria-modal="true"
      class="c0"
      role="dialog"
      tabindex="-1"
    >
      <div
        aria-labelledby="bd-modal_header-1"
        class="c1 c2 c3"
      >
        <div
          class="c4"
        >
          <button
            class="c5 c6"
          >
            <span
              class="c7"
            >
              <svg
                aria-labelledby="bd-icon-2"
                class="c8"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-2"
                >
                  Close
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M18.3 5.71a.996.996 0 00-1.41 0L12 10.59 7.11 5.7A.996.996 0 105.7 7.11L10.59 12 5.7 16.89a.996.996 0 101.41 1.41L12 13.41l4.89 4.89a.996.996 0 101.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="c9"
        >
          This is a modal
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`render open modal without backdrop 1`] = `
<body
  style="overflow-y: hidden;"
>
  @media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:1025px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<div />
  .c8 {
  vertical-align: middle;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  box-sizing: border-box;
}

.c2 {
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  padding: 0 0.5rem;
  background-color: #3C64F4;
  border-color: #3C64F4;
  font-weight: 600;
}

.c5:focus {
  outline: none;
}

.c5[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c5 + .bd-button {
  margin-top: 0.5rem;
}

.c5:active {
  background-color: #0B38D9;
}

.c5:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c5:hover:not(:active) {
  background-color: #2852EB;
}

.c5[disabled] {
  background-color: #D9DCE9;
}

.c7 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

.c6 {
  background-color: transparent;
  border: none;
  color: #313440;
  height: auto;
  padding: 0;
}

.c6:active {
  background-color: #DBE3FE;
}

.c6:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c6:hover:not(:active) {
  background-color: #F0F3FF;
}

.c6[disabled] {
  color: #D9DCE9;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  left: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1040;
}

.c3 {
  background: #FFFFFF;
  box-sizing: border-box;
  position: fixed;
  z-index: 1050;
  height: 100%;
  width: 100%;
}

.c4 {
  position: absolute;
  top: 0.25rem;
  right: 0.25rem;
}

.c9 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding: 0 1rem;
  overflow-y: auto;
}

@media (min-width:720px) {
  .c5 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c5 {
    width: auto;
  }
}

@media (min-width:720px) {
  .c3 {
    border-radius: 0.25rem;
    box-shadow: 0px 2px 12px rgba(49,52,64,0.2);
    height: auto;
    max-height: 90vh;
    max-width: 720px;
  }
}

@media (min-width:1025px) {
  .c3 {
    max-height: 80vh;
  }
}

@media (min-width:720px) {
  .c4 {
    display: none;
  }
}

@media (min-width:720px) {
  .c9 {
    padding: 0 1.5rem;
  }
}

<div>
    <div
      aria-modal="true"
      class="c0"
      role="dialog"
      tabindex="-1"
    >
      <div
        aria-labelledby="bd-modal_header-1"
        class="c1 c2 c3"
      >
        <div
          class="c4"
        >
          <button
            class="c5 c6"
          >
            <span
              class="c7"
            >
              <svg
                aria-labelledby="bd-icon-2"
                class="c8"
                fill="currentColor"
                height="24"
                stroke="currentColor"
                stroke-width="0"
                viewBox="0 0 24 24"
                width="24"
              >
                <title
                  id="bd-icon-2"
                >
                  Close
                </title>
                <path
                  d="M0 0h24v24H0V0z"
                  fill="none"
                />
                <path
                  d="M18.3 5.71a.996.996 0 00-1.41 0L12 10.59 7.11 5.7A.996.996 0 105.7 7.11L10.59 12 5.7 16.89a.996.996 0 101.41 1.41L12 13.41l4.89 4.89a.996.996 0 101.41-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
                />
              </svg>
            </span>
          </button>
        </div>
        <div
          class="c9"
        >
          This is a modal
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`renders destructive action button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: #DB3643;
  border-color: #DB3643;
  font-weight: 600;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #AD0000;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #FEDBDE;
}

.c0:hover:not(:active) {
  background-color: #CC1F1F;
}

.c0[disabled] {
  background-color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:0px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

@media (min-width:720px) {

}

@media (min-width:1025px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<button
  class="c0 bd-button"
>
  <span
    class="c1"
  >
    Apply
  </span>
</button>
`;

exports[`renders secondary action button 1`] = `
.c0 {
  -webkit-transition: all 150ms ease-out;
  transition: all 150ms ease-out;
  -webkit-transition-property: background-color,border-color,box-shadow,color;
  transition-property: background-color,border-color,box-shadow,color;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: 1px solid #D9DCE9;
  border-radius: 0.25rem;
  color: #FFFFFF;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  font-size: 1rem;
  font-weight: 400;
  height: 2.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 2rem;
  outline: none;
  padding: 0 1rem;
  pointer-events: auto;
  position: relative;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  white-space: nowrap;
  width: 100%;
  background-color: transparent;
  border-color: #3C64F4;
  color: #3C64F4;
}

.c0:focus {
  outline: none;
}

.c0[disabled] {
  border-color: #D9DCE9;
  pointer-events: none;
}

.c0 + .bd-button {
  margin-top: 0.5rem;
}

.c0:active {
  background-color: #DBE3FE;
}

.c0:focus {
  box-shadow: 0 0 0 0.25rem #DBE3FE;
}

.c0:hover:not(:active) {
  background-color: #F0F3FF;
}

.c0[disabled] {
  color: #D9DCE9;
}

.c1 {
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-auto-flow: column;
  grid-gap: 0.5rem;
  visibility: visible;
}

@media (min-width:0px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {
  .c0 + .bd-button {
    margin-top: 0;
    margin-left: 0.5rem;
  }
}

@media (min-width:720px) {
  .c0 {
    width: auto;
  }
}

@media (min-width:720px) {

}

@media (min-width:1025px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

@media (min-width:720px) {

}

<button
  class="c0 bd-button"
>
  <span
    class="c1"
  >
    Apply
  </span>
</button>
`;
